--- a/posts/maths/mathematical_statistics/math_stats.qmd
+++ b/posts/maths/mathematical_statistics/math_stats.qmd
@@ -733,12 +733,36 @@ $$
 $$
 
 
+### 8.0.5. Mean Squared Error
+
+We used bias and variance to evaluate the goodness of our estimators.
+
+We may want to compare a biased estimator vs an unbiased estimator. One method for doing so is to compare the mean squared error (MSE); the average squared distance from the true value.
+
+$$
+MSE(\hat{\theta}) = E[(\hat{\theta} - \theta)^2]
+$$
+
+We can work through some algebra to get the identity:
+$$
+\mathrm{MSE}(\hat{\theta}) = \mathrm{Bias}(\hat{\theta}) ^2 + \mathrm{Var}(\theta)
+$$
+
+So for an unbiased estimator, the $MSE = Variance$.
+
+Biased estimators can still be useful. We want estimators which are close to the mean with small variance. We may have an unbiased estimator which has a large variance. An alternative biased estimator with small bias but much tighter variance could be more useful.
+
+
 ## 8.1. MLE Estimator for a Bernoulli Distribution
 
 The general process is:
+
+```{mermaid}
+flowchart LR
+
+  A(PDF) --> B(Joint PDF) --> C(Likelihood Function) --> D(Log-Likelihood Function) --> E(Maximise)
 ```
-PDF -> Joint PDF -> Likelihood function -> Log-likelihood function -> Maximise it
-```
+
 
 Recall that our PDF is:
 $$
@@ -757,130 +781,128 @@ $$
 
 Our log-likelihood is then:
 $$
-l(p) = log L(p) = \sum x_i log(p) + (n - \sum x_i) log(1-p)
+\ell(p) = \log L(p) = \sum x_i \log(p) + (n - \sum x_i) log(1-p)
 $$
 
 Now to find the maximum.
 $$
-dl/dp = \sum x_i / p - (n - \sum x_i) / 1-p = 0
+\frac{d\ell}{dp} 
+= \frac{\sum_{i=1}^{n} x_i}{p} - \frac{n - \sum_{i=1}^{n} x_i}{1-p} 
+= 0
 $$
 
-The solution to this is $\hat{p}_{MLE}.
+The solution to this is $\hat{p}_{MLE}$.
+
 $$
-Multiply both sides by p(1-p)
-\sum x_i (1-p) - (n - \sum x_i) p = 0
+\begin{aligned}
+&\text{Multiply both sides by } p(1-p) \\[6pt]
+&\sum_{i=1}^{n} x_i (1-p) - (n - \sum_{i=1}^{n} x_i)\,p = 0 \\[10pt]
 
-Expand sums
-\sum x_i - p sum x_i - np + p \sum x_i = 0
+&\text{Expand sums} \\[6pt]
+&\sum_{i=1}^{n} x_i - p \sum_{i=1}^{n} x_i - np + p \sum_{i=1}^{n} x_i = 0 \\[10pt]
 
-Collect p terms
-p (- sum x_i -n + sum x_i) + sum x_i = 0
-=> sum x_i = np
-=> \hat{p} = \sum x_i / n = \bar{X}
+&\text{Collect \(p\) terms} \\[6pt]
+&p \big(- \sum_{i=1}^{n} x_i - n + \sum_{i=1}^{n} x_i \big) + \sum_{i=1}^{n} x_i = 0 \\[6pt]
+&\implies \sum_{i=1}^{n} x_i = np \\[6pt]
+&\implies \hat{p} = \frac{\sum_{i=1}^{n} x_i}{n} = \bar{X}
+\end{aligned}
 $$
 
 So the MLE estimate of p is the same as the MoM estimate: $\bar{X}$.
 
 
-## MLE Estimator for a Uniform Distribution
+## 8.2. MLE Estimator for a Uniform Distribution
 
 The PDF of each observation (random variable) $x_i$ is:
 $$
-f(x_i) = 1 / \theta  , 0 <= x_i <= \theta
-       = 0           , otherwise
+f(x_i) =
+\begin{cases}
+\dfrac{1}{\theta}, & 0 \leq x_i \leq \theta \\[6pt]
+0, & \text{otherwise}
+\end{cases}
 $$
 
 The joint PDF is then the product of these:
 $$
-f(X) = \product_{i=1}_{n} f(x_i) = 1/ \theta ^ n  , 0 <= x_i <= \theta for all x_i
-                                 = 0 otherwise
+f(X) = \prod_{i=1}^{n} f(x_i) =
+\begin{cases}
+\dfrac{1}{\theta^n}, & 0 \leq x_i \leq \theta \quad \text{for all } i \\[6pt]
+0, & \text{otherwise}
+\end{cases}
 $$
 
 The bound is important as it determines when this function is valid, which we need to consider when maximising the likelihood function. Note that **all** of the $x_i$ values need to be in the bound, otherwise the product, i.e. the entire joint PDF, is 0.
 
 The likelihood function is just reframing the joint PDF as a function of $\theta%.
 $$
-L(\theta) = 1/ \theta ^ n  , 0 <= x_i <= \theta for all x_i
-          = 0 otherwise
+L(\theta) =
+\begin{cases}
+\dfrac{1}{\theta^n}, & 0 \leq x_i \leq \theta \quad \text{for all } i \\[6pt]
+0, & \text{otherwise}
+\end{cases}
 $$
 
 We often take the log at this point to make the differentiation more tractable, but in this case we don't need to.
 
-We can plot $L$, or differentiate it, to realise that the value of \theta asymptotically approaches infinity as \theta approaches 0.
+We can plot $L$, or differentiate it, to realise that the value of $\theta$ asymptotically approaches infinity as $\theta$ approaches 0.
 $$
-dL / d \theta = -n \theta ^{n-1}
+\frac{dL}{d\theta} = -n \theta^{-n-1}
 $$
 
-<TODO: plot of L(\theta)>
+![Likelihood function for a uniform distribution where the maximum value observed is 3.5](likelihood_uniform.png)
 
-So is $\theta_{MLE} =0$? Naively we would think so, but remember the bounds of the PDF. \theta has to be at least as high as the observations we have seen for the PDF to be valid. So the maximum of the observed $x_i$ values is a lower bound. We can write this as $x_{(n)}$, where the brackets indicate this is the nth element in the sorted list. The smallest allowable value of $\theta$ maximises this function.
 
-Therefore $\theta_{MLE} = max x_i$.
+So is $\theta_{MLE} = 0$? Naively we would think so, but remember the bounds of the PDF; $\theta$ has to be at least as high as the observations we have seen for the PDF to be valid. So the maximum of the observed $x_i$ values is a lower bound. We can write this as $x_{(n)}$, where the brackets indicate this is the nth element in the sorted list. The smallest allowable value of $\theta$ maximises this function.
+
+Therefore $\hat{\theta}_{\mathrm{MLE}} = \max_{i} x_i$.
 
 Note that this is different to our MoM estimate, which said that $\theta_{MOM} = 2 \bar{X}$. 
+
 MLE bases the estimate of the upper bound parameter $\theta$ on the maximum value we have seen. MoM says to take the average we have observed, that should be somewhere near the middle, so we double it to get an estimate of the upper bound parameter $\theta$.
 
 We know that $\theta_{MOM}$ was unbiased, so $\theta_{MLE}$ must be biased.
 
 
-## Mean Squared Error
-
-We used bias and variance to evaluate the goodness of our estimators.
-
-We may want to compare a biased estimator vs an unbiased estimator. One method for doing so is to compare the mean squared error (MSE); the average squared distance from the true value.
-
-$$
-MSE(\hat{\theta}) = E[(\hat{\theta} - \theta)^2)
-$$
-
-We can work through some algebra to get the identity:
-$$
-MSE(\hat{\theta}) = Bias(\hat{\theta}) ^2 + Var(\theta)
-$$
-
-So for an unbiased estimator, the MSE = Variance.
-
-Biased estimators can still be useful. We want estimators which are close to the mean with small variance. We may have an unbiased estimator which has a large variance. An alternative biased estimator with small bias but much tighter variance could be more useful.
-
-
-## MLE Estimator for a Normal Distribution
+## 8.3. MLE Estimator for a Normal Distribution
 
 Recall that for a Normal distribution, the joint PDF is:
 $$
-f(X) = (2 \pi \sigma^2)^{-n/2}) e^{-\sum{i=1}_{n} (x-\mu)^2 / 2 \sigma^2}
+f(X) = (2 \pi \sigma^2)^{-n/2} e^{-\sum_{i=1}^{n} \frac{(x-\mu)^2}{2 \sigma^2}}
 $$
 
 So the likelihood is just reframing this as a function of the parameter $\mu$:
 $$
-L(\mu) = (2 \pi \sigma^2)^{-n/2}) e^{-\sum{i=1}_{n} (x-\mu)^2 / 2 \sigma^2}
+L(\mu) = (2 \pi \sigma^2)^{-n/2} e^{-\sum_{i=1}^{n} \frac{(x-\mu)^2}{2 \sigma^2}}
 $$
 
 Since we are taking logs the constant term at the front becomes an addition, and then the derivative of a constant is 0. So we can ignore it.
 The log-likelihood function is then:
 $$
-l(\mu) = -1 / (2 \sigma^2) \sum{i=1}_{n} (x-\mu)^2 
+\ell(\mu) = \frac{-1}{2 \sigma^2} \sum_{i=1}^{n} (x-\mu)^2 
 $$
 
-To find the maximum, we take
-$$ the derivative and set it to 0.
-dl / d \mu = -1 / (2 \sigma^2) \sum{i=1}_{n} 2(x-\mu) = 0
-=> \sum{i=1}_{n} (x-\mu) = 0
-=> \sum{i=1}_{n} x - (n* \mu) = 0
-=> \hat{\mu} = \sum{i=1}_{n} x / n
-           = \bar{X}
+To find the maximum, we take the derivative and set it to 0.
+$$
+\begin{aligned}
+\frac{d l}{d \mu} &= -\frac{1}{2\sigma^2} \sum_{i=1}^{n} 2(x_i - \mu) = 0 \\
+\implies \sum_{i=1}^{n} (x_i - \mu) &= 0 \\
+\implies \sum_{i=1}^{n} x_i - n \mu &= 0 \\
+\implies \hat{\mu} &= \frac{\sum_{i=1}^{n} x_i}{n} \\
+&= \boxed{\bar{X}}
+\end{aligned}
 $$
 
 So this is the same as the MoM estimator, $\hat{\mu} = \bar{X}$.
 
 
 
-# Fisher Information and Cramer Rao Lower Bound (CRLB)
+# 9. Fisher Information and Cramer Rao Lower Bound (CRLB)
 
 
-CRLB gives a proven lower bound for the variance of an estimator for certain distributions (in the exponential family). The starting point for this is to consider the information contained in one observation about our parameter $\theta%.
+CRLB gives a proven lower bound for the variance of an estimator for certain distributions (in the exponential family). The starting point for this is to consider the information contained in one observation about our parameter $\theta$.
 This is encompassed in the **Fisher Information**, defined as:
 $$
-I_1(\theta) = -E[l''(\theta)]
+I_1(\theta) = -\mathbb{E}[\ell''(\theta)]
 $$
 
 For $n$ observations, this scales as:
@@ -892,127 +914,136 @@ The intuition behind this is to think about the distribution for an estimator. F
 
 The **Cramer Rao Lower Bound (CRLB)** then tells us that the lower bound for the variance is:
 $$
-Var(\hat{\theta}) >= 1 / I_n(\theta)
+\operatorname{Var}(\hat{\theta}) \ge \frac{1}{I_n(\theta)}
 $$
 
 So if we can show that this bound is tight for a particular estimator and that the estimator is unbiased, the estimator is **efficient**.
 
 
 
-## CRLB for a Bernoulli Distribution 
+## 9.1. CRLB for a Bernoulli Distribution 
 
 Recall that in general for any distribution:
 $$
-Var(\hat{\theta}) >= 1 / n*I_1(\theta)
-I_1(\theta) = -E[l''(\theta)]
+\operatorname{Var}(\hat{\theta}) \ge \frac{1}{\,n \, I_1(\theta)\,}, \qquad
+I_1(\theta) = -\mathbb{E}[\ell''(\theta)]
 $$
 
 
 For a Bernoulli distribution:
 $$
-f(x) = p^{x} (1-p)^{x}
-L(p) = p^{x} (1-p)^{x}
-l(p) = xlog(p) + (1-x)log(1-p)
-dl/dp = x/ p - (1-x)/(1-p)
-
+\begin{aligned}
+f(x) &= p^x (1-p)^x \\
+L(p) &= p^x (1-p)^x \\
+\ell(p) &= x \log(p) + (1-x) \log(1-p) \\
+\frac{d\ell}{dp} &= \frac{x}{p} - \frac{1-x}{1-p}
+\end{aligned}
 $$
 
 The Fisher Information is then found for a single observation by taking the second derivative and finding its expected value.
 $$
-d2l/dp2 = l''(p) = -x/p^2 - (1-x)/(1-p)^2
+\frac{d^2 \ell}{dp^2} = \ell''(p) = -\frac{x}{p^2} - \frac{1-x}{(1-p)^2}
 $$
 
-The expectation over x, using $E[x] = p$ for a Bernoulli:
+The expectation over x, using $\mathbb{E}[x] = p$ for a Bernoulli:
 $$
-E[l''(p)] = E[ -x/p^2 - (1-x)/(1-p)^2]
-          = -p / p^2 - (1-p)/(1-p)^2
-          = - 1/p - 1/(1-p)
-          = - 1 / p(1-p)
+\begin{aligned}
+\mathbb{E}[\ell''(p)] &= \mathbb{E}\Bigg[-\frac{x}{p^2} - \frac{1-x}{(1-p)^2}\Bigg] \\
+&= -\frac{p}{p^2} - \frac{1-p}{(1-p)^2} \\
+&= -\frac{1}{p} - \frac{1}{1-p} \\
+&= -\frac{1}{\,p(1-p)\,}
+\end{aligned}
 $$
 
-The Fisher information is the negative of this, i.e. $I_1(p) = -E[l''(p)] = 1 / p(1-p)$
+The Fisher information is the negative of this, i.e. $I_1(p) = -E[l''(p)] = \frac{1}{p(1-p)}$
 
-The CRLB is the reciprocal, i.e. $CRLB = 1 / nI_1(p) = p(1-p) / n$
+The CRLB is the reciprocal, i.e. $\text{CRLB} = \frac{1}{\,n I_1(p)\,} = \frac{p(1-p)}{n}$
 
 This is the variance we found for both our MoM and MLE estimators, therefore these estimators are efficient.
 
 
-## CRLB for a Uniform Distribution 
+## 9.2. CRLB for a Uniform Distribution 
 
 The definition of Fisher Information only applies when the support (i.e. the sample space of the distribution) does not depend on the value of $\theta$. This condition is breached for the uniform distribution.
 
 The uniform distribution is not a member of the exponential family.
 
 
-## CRLB for a Normal Distribution 
+## 9.3. CRLB for a Normal Distribution 
 
 As in the general case, we need to find the log-likelihood function, then calculate its second derivative.
 
 $$
-l(\mu) = log(1/(sqrt(2 \pi \sigma^2)) + (-1 / (2 \sigma^2) (x-\mu)^2 )
-dl / d\mu =                           + (x-\mu) / \sigma^2 
-L''(\mu) = -1 / \sigma^2
+\begin{aligned}
+\ell(\mu) &= \log\left(\frac{1}{\sqrt{2 \pi \sigma^2}}\right) - \frac{1}{2 \sigma^2} (x-\mu)^2 \\
+\frac{d\ell}{d\mu} &= \frac{x-\mu}{\sigma^2} \\
+\ell''(\mu) &= -\frac{1}{\sigma^2}
+\end{aligned}
 $$
 
 The Fisher Information for a single observation is therefore:
 $$
-I_1(\mu) = -E[-1 / \sigma^2]
-         = 1 / \sigma^2  Since none of this expression is random
+\begin{aligned}
+I_1(\mu) &= -\mathbb{E}\Big[-\frac{1}{\sigma^2}\Big] \\
+         &= \frac{1}{\sigma^2} \quad \text{Since none of this expression is random}
+\end{aligned}
 $$
 
 The CRLB is therefore 
 $$
-Var(\mu) >= \sigma^2 / n
+\operatorname{Var}(\mu) \ge \frac{\sigma^2}{n}
 $$
 
-So our Mom and MLE estimators are both efficient.
+So our MOM and MLE estimators are both efficient.
 
 
-## Efficiency
+## 9.4. Efficiency
 
-We can define the **efficiency** of an estimator as the ratio of it's variance and its optimal variance given by the CRLB:
+We can define the **efficiency** of an estimator as the ratio of its variance and its optimal variance given by the CRLB:
 $$
-Efficiency(\hat{\theta}) = CRLB / Var(\hat{\theta})
+\text{Efficiency}(\hat{\theta}) = \frac{\text{CRLB}}{\operatorname{Var}(\hat{\theta})}
 $$
 
 We can also compare two different estimators by taking the ratio of their variances. This is the **relative efficiency**. For example, comparing the MOM and MLE estimators:
 $$
-Relative Efficiency = Var(\hat{\theta}_{MOM}) / Var(\hat{\theta}_{MLE})
+\text{Relative Efficiency} = \frac{\operatorname{Var}(\hat{\theta}_{\text{MOM}})}{\operatorname{Var}(\hat{\theta}_{\text{MLE}})}
 $$
 
-This is typically a function of $n$. We can analyse the **relative asymptotic efficiency by observing the behaviour as $n -> \inf$.
+This is typically a function of $n$. We can analyse the **relative asymptotic efficiency by observing the behaviour as $n \to \infty$.
 
 
 
-# Central Limit Theorem
+# 10. Central Limit Theorem
 
 This relates to the **asymptotic distribution** of our estimators. 
 
 We previously discussed that the estimator of a random variable is itself a random variable, which meant we could analyse its expected value and variance. We can go a step further; rather than just analyse these summary statistics of the estimator, let's analyse the whole distribution.
 
-The *asymptotic* behaviour means the distribution as our sample size $n -> \inf$.
-This obviously can never occur in practice, so as a rule of thumb when $n>=30$ the CLT is approximately true.
+The *asymptotic* behaviour means the distribution as our sample size $n \to \infty$.
+This obviously can never occur in practice, so as a rule of thumb when $n \ge 30$ the CLT is approximately true.
 
 Once we know the distribution of the parameter, we can reason about the probability that the parameter takes a certain value. This is the idea behind hypothesis testing.
 
-The CLT states that for a large enough sample size, the distribution of the parameter is approximately normal. It applies when the estimator is a sum of average of random variables. This is true of a lot of estimators. One notable exception is the MLE estimate for a uniform	 distribution, as this was the _maximum_ of the data points, so the CLT does not apply.
+The CLT states that for a large enough sample size, the distribution of the parameter is approximately normal. **It applies when the estimator is a sum of average of random variables**. This is true of a lot of estimators. One notable exception is the MLE estimate for a uniform distribution, as this was the _maximum_ of the data points, so the CLT does not apply.
 
-For most distributions, the rule of thumb for CLT to apply is $n >= 30$. For a Bernoulli distribution, the condition is $np >= 10, n(1-p) >= 10$.
+For most distributions, the rule of thumb for CLT to apply is $n \ge 30$. For a Bernoulli distribution, the condition is $np \ge 10, \quad n(1-p) \ge 10$.
 For a Normal distribution, the parameter is **exactly** Normal regardless of sample size, so we don't need CLT.
 
 
 
-## CLT for a Bernoulli
+## 10.1. CLT for a Bernoulli Distribution
 
 Recall that both MOM and MLE estimators for a Bernoulli distribution were $\hat{p} = \bar{X}$.
 
 As this is an *average* of data points, CLT applies.
-A general rule of thumb is that CLT applies when the expected number of successes $np > 10$ and the expected number of failures $n(1-p) > 10$.
+A general rule of thumb is that CLT applies when the expected number of successes $np \ge 10$ and the expected number of failures $n(1-p) \ge 10$.
 
 We've already established the mean and variance of the estimator $\hat{p}$ in earlier sections:
 $$
-E[\hat{p}] = p
-Var[\hat{p}] = p(1-p) / n
+\begin{aligned}
+\mathbb{E}[\hat{p}] &= p \\
+\operatorname{Var}[\hat{p}] &= \frac{p(1-p)}{n}
+\end{aligned}
 $$
 
 So the value of the estimator is a Normally distributed random variable with those parameters. We now know the entire distribution and can do interesting things with it, like hypothesis testing.
@@ -1020,61 +1051,66 @@ So the value of the estimator is a Normally distributed random variable with tho
 The CLT approximation is helpful because the Normal distribution can often be easier to compute than the original distribution, so it reduces the computing power (or historically, the number of calculations required by hand), while still giving a good approximation to the true value if we had used the actual distribution.
 
 
-## CLT for a Uniform
+## 10.2. CLT for a Uniform Distribution
 
 We only consider the MOM estimate not the MLE estimate, because the MLE estimate was a **maximum** of values, meaning the CLT does not apply.
 
-We can reason about the asymptotic distribution of the MOM estimate for a uniform distribution if our sample size is large enough $n>30$.
+We can reason about the asymptotic distribution of the MOM estimate for a uniform distribution if our sample size is large enough $n \ge 30$.
 
 We've already established the mean and variance of the estimator $\theta$ in earlier sections:
 $$
-E[\hat{\theta}] = \theta
-Var[\hat{p}] = \theta ^2 / 3n
+\begin{aligned}
+\mathbb{E}[\hat{\theta}] &= \theta \\
+\operatorname{Var}[\hat{p}] &= \frac{\theta^2}{3n}
+\end{aligned}
 $$
 
 So again, our estimate is a Normally-distributed random variable with these parameters.
 
 
-## CLT for a Normal
+## 10.3. CLT for a Normal Distribution
 
 When we add Gaussians we get another Gaussian, so the actual (rather than asymptotic) distribution of our estimator for a Normal distribution is **exactly** Normal.
  
-We don't need any specific sample size for this to be true; it is true for $n=1,2,3,...$, we don't need our usual rule of $n>30$.
+We don't need any specific sample size for this to be true; it is true for $n=1,2,3,...$, we don't need our usual rule of $n \ge 30$.
 
 We've already established the mean and variance of the estimator $\mu$ in earlier sections:
 $$
-E[\hat{\mu}] = \mu
-Var[\hat{\mu}] = \sigma ^2 / n
+\begin{aligned}
+\mathbb{E}[\hat{\mu}] &= \mu \\
+\operatorname{Var}[\hat{\mu}] &= \frac{\sigma^2}{n}
+\end{aligned}
 $$
 
 So again, our estimate is a Normally-distributed random variable with these parameters.
 
-Note that we don't need a minimum sample size $n$ for the CLT to apply, but a large $n reduces the variance of our estimate, thus reducing our uncertainty.
+Note that we don't need a minimum sample size $n$ for the CLT to apply, but a large $n$ reduces the variance of our estimate, thus reducing our uncertainty.
 
 
-## Consistency
+## 10.4. Consistency
 
 Consistency is another measure of asymptotic behaviour that says that as the number of samples approaches infinity, the estimator converges to the true value of the parameter.
 
 Mathematically
 $$
-P(| \hat{\theta} - \theta | < \epsilon) -> 1  as n -> \inf
-for \epsilon arbitrarily small
+P\big(| \hat{\theta} - \theta | < \epsilon \big) \to 1 \quad \text{as } n \to \infty, 
+\quad \text{for } \epsilon \text{ arbitrarily small}
 $$
 
-Unbiased estimators are **consistent** if their variance approaches 0 as n approaches infinity.
+Unbiased estimators are **consistent** if their variance approaches 0 as $n$ approaches infinity.
 
 
-# Confidence Intervals
+# 11. Confidence Intervals
+## 11.0. Background
 
 When we've looked at estimators in previous sections, we've focused on **point estimates**. 
 
 But we know that these are random variables, so we would prefer to make **interval estimates**. Then we can make statements like "we are 95% sure that the mean is between 1.5 to 2.5".
 
-We can use the results from previous sections for this. Recall that we were able to reason about the distribution of our estimate with CLT. The *estimate* $\hat{\theta}$ is centred on the true value, and using the $2 \sigma(\hat{\theta})$ value, there is a 95% probability that the estimate lies within 2 (sample) standard deviations of the true mean.
+We can use the results from previous sections for this. Recall that we were able to reason about the distribution of our estimate with CLT. The *estimate* $\hat{\theta}$ is centred on the true value, and using the $2 \, \sigma(\hat{\theta})$ value, there is a 95% probability that the estimate lies within 2 (sample) standard deviations of the true mean.
 Mathematically:
 $$
-P(\theta - 2\sigma(\hat{\theta}) <= \hat{\theta} <= \theta  2\sigma(\hat{\theta})) = 0.95
+P\big(\theta - 2\sigma(\hat{\theta}) \le \hat{\theta} \le \theta + 2\sigma(\hat{\theta})\big) = 0.95
 $$
 
 Note that we have the population parameter value $\theta$ in the left and right terms and the *sample* value $\hat{\theta}$ in the middle term.
@@ -1083,12 +1119,12 @@ We want to shift our perspective when going from probability to statistics. In s
 
 We can do this with a bit of algebra. Starting with the equation above, subtract $\theta$ and $\hat{\theta}$ from each term inside the probability. 
 $$
-P(-\hat{\theta} - 2\sigma(\hat{\theta}) <= \theta <= -\hat{\theta} + 2\sigma(\hat{\theta})) = 0.95
+P\big(-\hat{\theta} - 2\sigma(\hat{\theta}) \le -\theta \le -\hat{\theta} + 2\sigma(\hat{\theta})\big) = 0.95
 $$
 
 Now multiply all terms by -1 and note that it flips the sign of the inequality when we multiply by a negative value.
 $$
-P(\hat{\theta} + 2\sigma(\hat{\theta}) >= \theta >= \hat{\theta} - 2\sigma(\hat{\theta})) = 0.95
+P\big(\hat{\theta} - 2\sigma(\hat{\theta}) \le \theta \le \hat{\theta} + 2\sigma(\hat{\theta})\big) = 0.95
 $$
 
 This was our goal: we now have bounds for the **population** value $\theta$ in terms of the estimated values $\hat{\theta}$ which are known values that we can calculate from the data.
@@ -1102,11 +1138,11 @@ What does it mean to have a 95% confidence interval? Say we have a process:
 2. Calculate the confidence interval
 3. Theoretically repeat this process over and over
 
-So we are doing 20 coin flips. We get a confidence interval [0.4, 0.45]
+So we are doing 20 coin flips. We get a confidence interval $[0.4, 0.45]$
 
-Then we do 20 more flips and get a confidence interval [0.48,0.53]
+Then we do 20 more flips and get a confidence interval $[0.48,0.53]$
 
-Then a third time we do 20 flips and get a confidence interval [0.46, 0.55]
+Then a third time we do 20 flips and get a confidence interval $[0.46, 0.55]$
 
 And we keep going... We get a list of confidence intervals:
 $$
@@ -1119,54 +1155,56 @@ $$
 ...
 $$
 
-Our 95% value means **"95% of these hypothetical intervals calculated will contain the true parameter value $\theta$"**.
+Our 95% confidence value means **"95% of these hypothetical intervals calculated will contain the true parameter value $\theta$"**.
 
 
-## The pivot from probability to statistics
+### 11.0.1 The Pivot from Probability to Statistics
 
 The pivot from probability to statistics was mentioned in the previous section but is crucial so bears emphasising.
 
-In probability, we can make statements like "there is 95% probability that $\hat{\theta}$ is in $\theta +- 2 \sigma(\theta)$".
+In probability, we can make statements like "there is 95% probability that $\hat{\theta} \text{ is in } \theta \pm 2 \, \sigma(\theta)$".
 
-In statistics, thanks to our pivot (algebraic manipulation of the inequality), we make statements like "we are 95% confidence that $\theta$ is in the interval \hat{\theta} +- 2 * standard error(\hat{\theta})$".
+In statistics, thanks to our pivot (algebraic manipulation of the inequality), we make statements like "we are 95% confidence that $\theta$ is in the interval $\hat{\theta} \pm 2 \times \text{standard error}(\hat{\theta})$".
 
 
-## Some useful terms
+### 11.0.2. Some Useful Terms
 
-The sample standard deviation, e.g. $\sigma_hat / sqrt(n)$ is called the **standard error**.
+The sample standard deviation, e.g. $\frac{\hat{\sigma}}{\sqrt{n}}$ is called the **standard error**.
 
 The **margin of error** for a particular confidence interval statement is the standard error multiplied by the number of standard deviations we use. For example, for a 95% confidence interval
 $$
-Margin of error = 2 * Standard error
+\text{Margin of error} = 2 \times \text{Standard error}
 $$ 
 
 
-## Bernoulli Confidence Intervals
+## 11.1 Bernoulli Confidence Intervals
 
 We've already established the mean and standard error of our MOM/MLE estimators (they were the same for Bernoulli).
 
-So our 95% confidence interval is
+So our 95% confidence interval is:
 $$
-\hat{p} +- 2 sqrt(\hat{p} (1-\hat{p}) / n )
+\hat{p} \pm 2 \, \sqrt{\frac{\hat{p} (1-\hat{p})}{n}}
 $$
 
 
-## Uniform distribution confidence intervals
+## 11.2. Uniform Distribution Confidence Intervals
 
 We skip the MLE uniform estimator since it's a maximum of values, therefore CLT does not apply and we cannot reason in the same way. 
 
 For our MOM estimator, the 95% confidence interval is:
 $$
-\hat{\theta} +- 2 * \theta / sqrt(3n)
+\hat{\theta} \pm \frac{2 \, \theta}{\sqrt{3n}}
 $$
 
 
-$$ Normal distribution confidence intervals
+## 11.3. Normal Distribution Confidence Intervals
 For our MOM estimator, the 95% confidence interval is:
 $$
-\hat{\mu} +- 2 * \sigma / sqrt(n)
+\hat{\mu} \pm \frac{2 \, \sigma}{\sqrt{n}}
 $$
 
 
 
-<Add links to all practice worksheet pdfs>
+# References
+
+- ["Mathematical Statistics for Data Science" Udemy course](https://www.udemy.com/course/mathstat)
