Add basic stats notes

--- a/posts/maths/mathematical_statistics/math_stats.qmd
+++ b/posts/maths/mathematical_statistics/math_stats.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Mathematical Statistics"
-description: "Stats"
+description: "Fun with Latex ;)"
 date: "2025-07-20"
 categories: [Maths, Statistics]
 ---
